# sonic-syntax

./: .hlint.yaml  CHANGELOG.md  COPYING.md  README.md  brittany.yaml  sonic-syntax.cabal
.github/workflows/: ci.yaml  release.yaml
script/ci/: github_release.sh
src/Language/Sonic/: Parser.hs  Syntax.hs
src/Language/Sonic/Parser/: Attribute.hs  Declaration.hs  Expression.hs  Kind.hs  Literal.hs  Module.hs  Name.hs  Parsable.hs  Path.hs  Pattern.hs  Type.hs
src/Language/Sonic/Parser/Internal/: Comment.hs  Error.hs  Lexer.hs  Location.hs  Operator.hs  Parse.hs  Source.hs  Tuple.hs
src/Language/Sonic/Syntax/: Attribute.hs  Comment.hs  Declaration.hs  Expression.hs  Kind.hs  Literal.hs  Location.hs  Module.hs  Name.hs  Path.hs  Pattern.hs  Sequence.hs  Type.hs
test/: Golden.hs  TestImport.hs
test/Language/Sonic/Parser/: AttributeSpec.hs  ExpressionSpec.hs  KindSpec.hs  LiteralSpec.hs  NameSpec.hs  PathSpec.hs  PatternSpec.hs  TypeSpec.hs
test/golden/: attribute.sonic  attribute.sonic.golden  big_expression.sonic  big_expression.sonic.golden  class.sonic  class.sonic.golden  data.sonic  data.sonic.golden  function.sonic  function.sonic.golden  function_ctor_pats.sonic  function_ctor_pats.sonic.golden  signature.sonic  signature.sonic.golden  simple.sonic  simple.sonic.golden
