cabal-version:      2.0
name:               sonic-syntax
version:            0.1.0.0
synopsis:           Syntax definition for Sonic source
description:
  @sonic-syntax@ provides a complete syntax definition for Sonic language.

bug-reports:        https://github.com/sonic-lang/sonic-syntax/issues
homepage:           https://github.com/sonic-lang/sonic-syntax#readme
license:            GPL-2.0
license-file:       COPYING.md
author:             coord_e
maintainer:         coord_e <me@coord-e.com>
copyright:          Copyright 2020 coord_e
category:           Language
build-type:         Simple
extra-source-files:
  README.md
  CHANGELOG.md

library
  hs-source-dirs:     src
  exposed-modules:
    Language.Sonic.Parser
    Language.Sonic.Syntax.Declaration
    Language.Sonic.Syntax.Expression
    Language.Sonic.Syntax.Kind
    Language.Sonic.Syntax.Literal
    Language.Sonic.Syntax.Location
    Language.Sonic.Syntax.Module
    Language.Sonic.Syntax.Name
    Language.Sonic.Syntax.Path
    Language.Sonic.Syntax.Pattern
    Language.Sonic.Syntax.Sequence
    Language.Sonic.Syntax.Type

  other-modules:
    Language.Sonic.Parser.Declaration
    Language.Sonic.Parser.Expression
    Language.Sonic.Parser.Internal.Comment
    Language.Sonic.Parser.Internal.Error
    Language.Sonic.Parser.Internal.Lexer
    Language.Sonic.Parser.Internal.Location
    Language.Sonic.Parser.Internal.Operator
    Language.Sonic.Parser.Internal.Parse
    Language.Sonic.Parser.Internal.Source
    Language.Sonic.Parser.Internal.Tuple
    Language.Sonic.Parser.Kind
    Language.Sonic.Parser.Literal
    Language.Sonic.Parser.Module
    Language.Sonic.Parser.Name
    Language.Sonic.Parser.Parsable
    Language.Sonic.Parser.Path
    Language.Sonic.Parser.Pattern
    Language.Sonic.Parser.Type

  build-depends:
      base                ^>=4.13
    , containers          ^>=0.6
    , megaparsec          ^>=8.0
    , microlens           ^>=0.4
    , microlens-th        ^>=0.4
    , mtl                 ^>=2.2
    , parser-combinators  ^>=1.2
    , text
    , transformers        ^>=0.5

  default-language:   Haskell2010
  default-extensions:
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    MonoLocalBinds
    TypeSynonymInstances

  if impl(ghc >=8)
    ghc-options: -Wredundant-constraints

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns
