cabal-version:      2.0
name:               sonic-syntax
version:            0.1.0.0
synopsis:           Parser for Sonic
description:
  @sonic-syntax@ provides a complete syntax definition and a parser for the Sonic language.

bug-reports:        https://github.com/sonic-lang/sonic-syntax/issues
homepage:           https://github.com/sonic-lang/sonic-syntax#readme
license:            GPL-2
license-file:       COPYING.md
author:             coord_e
maintainer:         coord_e <me@coord-e.com>
copyright:          Copyright 2020 coord_e
category:           Language
build-type:         Simple
extra-source-files:
  README.md
  CHANGELOG.md

-- see .github/workflows
tested-with:        GHC ==8.4.4 || ==8.6.5 || ==8.8.3 || ==8.10.1

source-repository head
  type:     git
  location: https://github.com/sonic-lang/sonic-syntax

library
  hs-source-dirs:     src
  exposed-modules:
    Language.Sonic.Parser
    Language.Sonic.Syntax.Declaration
    Language.Sonic.Syntax.Expression
    Language.Sonic.Syntax.Kind
    Language.Sonic.Syntax.Literal
    Language.Sonic.Syntax.Location
    Language.Sonic.Syntax.Module
    Language.Sonic.Syntax.Name
    Language.Sonic.Syntax.Path
    Language.Sonic.Syntax.Pattern
    Language.Sonic.Syntax.Sequence
    Language.Sonic.Syntax.Type

  other-modules:
    Language.Sonic.Parser.Declaration
    Language.Sonic.Parser.Expression
    Language.Sonic.Parser.Internal.Comment
    Language.Sonic.Parser.Internal.Error
    Language.Sonic.Parser.Internal.Lexer
    Language.Sonic.Parser.Internal.Location
    Language.Sonic.Parser.Internal.Operator
    Language.Sonic.Parser.Internal.Parse
    Language.Sonic.Parser.Internal.Source
    Language.Sonic.Parser.Internal.Tuple
    Language.Sonic.Parser.Kind
    Language.Sonic.Parser.Literal
    Language.Sonic.Parser.Module
    Language.Sonic.Parser.Name
    Language.Sonic.Parser.Parsable
    Language.Sonic.Parser.Path
    Language.Sonic.Parser.Pattern
    Language.Sonic.Parser.Type

  build-depends:
      base                >=4.11.0 && <5
    , containers          >=0.1.0  && <0.7
    , megaparsec          ^>=8.0
    , microlens           ^>=0.4
    , microlens-th        ^>=0.4
    , mtl                 ^>=2.2.1
    , parser-combinators  >=0.4.0  && <1.3
    , text                >=0.1.0  && <1.3

  default-language:   Haskell2010
  default-extensions:
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    MonoLocalBinds
    TypeSynonymInstances

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints

test-suite test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            test.hs

  -- cabal-fmt: expand test
  other-modules:
    Golden
    Language.Sonic.Parser.ExpressionSpec
    Language.Sonic.Parser.KindSpec
    Language.Sonic.Parser.LiteralSpec
    Language.Sonic.Parser.NameSpec
    Language.Sonic.Parser.PathSpec
    Language.Sonic.Parser.PatternSpec
    Language.Sonic.Parser.TypeSpec
    TestImport

  build-tool-depends: tasty-discover:tasty-discover -any
  build-depends:
      base
    , directory
    , filepath
    , pretty-simple
    , sonic-syntax
    , tasty
    , tasty-golden
    , tasty-hunit
    , text

  default-language:   Haskell2010
  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
